--- a/order-system/状态机.md
+++ b/order-system/状态机.md
@@ -358,7 +358,7 @@ const STATUS_ACTIONS = {
 
 ### 售后行为表
 
-订单状态         行为
+订单状态,         行为
 
 10-1-3-7-1      ACTION.CONTACT
 
@@ -366,7 +366,7 @@ const STATUS_ACTIONS = {
 
 ### 售后描述表
 
-售后类型   售后状态        描述
+售后类型,   售后状态,      描述
 
 2           1            您已经成功发起售后，商户正在紧急处理中。
 
