--- a/order-system/状态机.md
+++ b/order-system/状态机.md
@@ -85,7 +85,7 @@
 
 ## 操作定义 ACTION
 
-`
+```javascript
 const ACTION = {
 
   CLOSE: {
@@ -169,11 +169,11 @@ const ACTION = {
     inner: false
   }
 };
-`
+```
 
 ## 订单模块操作
 
-`
+```javascript
 const STATUS_ACTIONS = {
 
   // 待付款
@@ -261,11 +261,12 @@ const STATUS_ACTIONS = {
 
   '10-1-8-5-1': [ACTION.EXPRESS, ACTION.REFUND_DETAIL]
 };
-`
+```
 
 ## 售后模块操作
 
-`const STATUS_RERUND_DETAIL_ACTIONS = {
+```javascript
+const STATUS_RERUND_DETAIL_ACTIONS = {
 
   // 已申请退款
 
@@ -340,7 +341,8 @@ const STATUS_ACTIONS = {
   '10-1-8-7-1': [ACTION.CONTACT],
 
   '10-1-8-7-2': [ACTION.CONTACT]
-}`
+}
+```
 
 ## 售后详情操作
 
